--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "babel-runtime": "^6.26.0",
     "fastclick": "^1.0.6",
     "jsonp": "0.2.1",
-    "better-scroll": "^1.6.0"
+    "better-scroll": "^1.6.0",
+    "axios": "^0.17.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
