--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jsonp": "0.2.1",
     "better-scroll": "1.5.1",
     "axios": "^0.17.1",
-    "vue-lazyload": "^1.1.4"
+    "vue-lazyload": "^1.1.4",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
