--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
-    "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
+    "axios": "^0.17.1",
     "babel-runtime": "^6.26.0",
+    "better-scroll": "1.5.1",
+    "create-keyframe-animation": "^0.1.0",
     "fastclick": "^1.0.6",
     "jsonp": "0.2.1",
-    "better-scroll": "1.5.1",
-    "axios": "^0.17.1",
+    "vue": "^2.5.2",
     "vue-lazyload": "^1.1.4",
+    "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
